# gami_mc_protocol

./: .gitignore  Cargo.toml  README.md  build.rs
macros/: Cargo.toml
macros/src/: entity.rs  lib.rs  serialization.rs
src/: lib.rs
src/packets/: mod.rs  packets_enum.rs
src/packets/handshake/: client.rs
src/packets/handshake/client/: 0_set_protocol.rs  254_legacy_server_list_ping.rs
src/packets/login/: client.rs  server.rs
src/packets/login/client/: 0_login_start.rs  1_encryption_response.rs
src/packets/login/server/: 0_disconnect.rs  1_encryption_request.rs  2_login_success.rs  3_set_compression.rs
src/packets/play/: client.rs  server.rs
src/packets/play/client/: 0_keep_alive.rs  10_arm_animation.rs  13_close_window.rs  15_transaction.rs  1_chat.rs  21_client_settings.rs  22_client_command.rs  2_use_entity.rs  3_flying.rs  4_position.rs  5_look.rs  6_position_and_look.rs  9_held_item_slot.rs
src/packets/play/server/: 0_keep_alive.rs  10_bed.rs  11_animation.rs  12_spawn_player.rs  13_collect.rs  14_spawn_object.rs  15_spawn_mob.rs  16_spawn_entity_painting.rs  17_spawn_entity_experience_orb.rs  18_entity_velocity.rs  19_entity_destroy.rs  1_join_game.rs  1_login.rs  20_entity.rs  21_entity_relative_move.rs  22_entity_look.rs  23_entity_move_look.rs  24_entity_teleport.rs  25_entity_head_rotation.rs  26_entity_status.rs  27_attach_entity.rs  28_entity_metadata.rs  29_entity_effect.rs  2_chat.rs  30_remove_entity_effect.rs  35_block_change.rs  3_update_time.rs  47_set_slot.rs  4_entity_equipment.rs  (+12 more)
src/packets/status/: client.rs  server.rs
src/registry/: client_command_actions.rs  client_settings_chat_modes.rs  colors.rs  difficulty.rs  dimension.rs  enchantments.rs  mod.rs  potion_effects.rs  tcp.rs  vec_3.rs
src/registry/entities/: mobs.rs  mod.rs  objects.rs  player.rs
src/serialization/: deserializer.rs  fixed_point.rs  json.rs  metadata.rs  mod.rs  serializer.rs  varint.rs
src/serialization/encoding/: fixed_point.rs  mod.rs  varint.rs
src/serialization/nbt/: deserializer.rs  mod.rs  validation.rs
(+66 files in other folders)
