[package]
name = "gami_macros"
version = "0.1.0"
authors = ["Oery"]
description = "Macros for the gami_mc_protocol crate"
repository = "https://github.com/Oery/gami_mc_protocol"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full"] }
proc-macro2 = "1.0.93"
